# cargo_bot

./: .gitignore  Cargo.toml  README.md
cargo-bot/: Cargo.toml  build.rs  sample.json
cargo-bot-functions/: Cargo.toml
cargo-bot-functions/src/explain/: mod.rs  params.rs
cargo-bot-functions/src/update_files/: mod.rs  params.rs
cargo-bot-params/: Cargo.toml
cargo-bot-params/src/: lib.rs  update_files.rs
cargo-bot/src/: api.rs  args.rs  cargo.rs  config.rs  main.rs  update_files.rs
cargo-bot/src/model/: request.rs  response.rs
cargo-exo/: Cargo.toml  build.rs
cargo-exo-cli/: Cargo.toml
cargo-exo-functions/: Cargo.toml
cargo-exo-functions/src/: lib.rs
cargo-exo-functions/src/more_context/: mod.rs  params.rs
cargo-exo-functions/src/update_files/: cli.rs  mod.rs
cargo-exo/src/: api.rs  args.rs  cargo.rs  config.rs  gpt.rs  main.rs  rustfix.rs
cargo-exo/src/model/: error.rs  request.rs  response.rs
resources/prompts/: system.md
src/: api.rs  cargo.rs  main.rs  parse_error.rs  update_files.rs
src/model/: mod.rs  request.rs  response.rs  update_files.rs
