[package]
name = "cargo-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
difference = "2.0"
dialoguer = "0.8"
indicatif = "0.16"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.1"
tokio = { version = "1.0", features = ["full"] }
