[workspace]
resolver = "2"

members = ["cargo-exo", "cargo-exo-functions"]

[workspace.dependencies]
clap = "4.3"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
difference = "2.0"
dialoguer = "0.8"
indicatif = "0.16"
once_cell = "1.8"
regex = "1.5"
itertools = "0.11"
reqwest = { version = "0.11", features = ["json"] }
rustfix = "0.6"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.1"
tokio = { version = "1.0", features = ["full"] }
toml = "0.5"
watchexec = "2.3"
