[package]
name = "cargo-bot-functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
colored.workspace = true
dialoguer.workspace = true
difference.workspace = true
indicatif.workspace = true
once_cell.workspace = true
regex.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde.workspace = true
strip-ansi-escapes.workspace = true
tokio.workspace = true
toml.workspace = true
