[package]
name = "cargo-exo-functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-exo-cli = { path = "../cargo-exo-cli" }

chrono.workspace = true
colored.workspace = true
dialoguer.workspace = true
difference.workspace = true
itertools.workspace = true
regex.workspace = true
rustfix.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
